--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,6 +1,7 @@
 .bg {
   background-image: url("/public/images/Image\ 34.png");
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   object-fit: contain;
   height: 115vh;
   width: 100vw;
@@ -26,11 +27,8 @@
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
 .heading {
-  position: relative;
-  left: 40%;
+  text-align: center !important;
   color: white;
-  width: fit-content;
-
   font-weight: bolder;
   font-size: large;
 }
@@ -41,7 +39,7 @@
   left: 4%;
 }
 .ice {
-  width: 22vw;
+  width: 40%;
   position: relative;
   left: 4%;
   border-radius: 15px;
@@ -50,7 +48,7 @@
 }
 .fire {
   padding: 5px;
-  width: 22vw;
+  width: 40%;
   position: relative;
   left: 7%;
   border-radius: 15px;
@@ -58,7 +56,7 @@
 .ammount {
   color: white;
   padding: 2px;
-  margin-left: 2vw;
+  margin-left: 1.7rem;
 
   width: fit-content;
   font-size: 10px;
@@ -67,7 +65,7 @@
 }
 .inputammount {
   outline: none;
-  width: 45vw;
+  width: 85%;
   height: 8vh;
   margin-left: 20px;
   color: white;
@@ -82,7 +80,7 @@
 .inputusername {
   color: white;
   outline: none;
-  width: 45vw;
+  width: 80%;
   height: 6vh;
   margin-left: 20px;
   background: rgba(0, 0, 0, 0.47);
@@ -103,7 +101,7 @@
 .save {
   position: relative;
   top: -7%;
-  left: 79%;
+  left: 70%;
   height: 4.5vh;
   z-index: 1;
   border-radius: 15px;
@@ -113,13 +111,14 @@
   border: none;
   padding: 3px;
   border: none;
-  width: 80px;
+  width: 18%;
   padding: 5px;
 }
 .playnow {
   color: rgb(6, 6, 85);
+  
   font-weight: bolder;
-  font-size: large;
+  font-size: 0.8rem;
   background-color: white;
   height: 8vh;
   width: 15vw;
@@ -127,8 +126,8 @@
   border-radius: 25px;
   cursor: pointer;
   border-color: transparent;
-  position: absolute;
-  top: 86%;
+  position: relative ;
+  top:5%;
   left: 35%;
   transition: all 0.2s ease-in-out;
 }
