--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,36 +1,40 @@
 .bg_image {
   background-image: url("/public/images/Image\ 34.png");
   background-repeat: no-repeat;
+  background-size: 100% 100%;
   object-fit: contain;
   height: 100vh;
   width: 100vw;
 }
 .logo {
-  height: 35vh;
-  /* width: 30vw; */
+  height: 25vh;
+  width: 50vw;
   position: absolute;
   top: 16%;
-  left: 35%;
+  left: 30%;
+  max-width: 40%;
 }
 .imglogo {
-  height: 50vh;
+  height: 35%;
   position: absolute;
   top: 40%;
-  left: 34%;
+  left: 35%;
+  max-width: 45%;
 }
 
 .play {
   color: rgb(6, 6, 85);
   font-weight: bolder;
-  font-size: large;
+  font-size: 0.8rem;
   background-color: white;
   height: 8vh;
-  width: 15vw;
+  width: 15%;
   padding: 3px;
   border-radius: 25px;
   cursor: pointer;
   border-color: transparent;
   position: absolute;
   top: 95%;
-  left: 45%;
+  left: 43%;
+  max-width: 50%;
 }
